101-hdinsight-secure-vnet/azuredeploy.json
{
   "$schema":"https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
   "contentVersion":"1.0.0.0",
   "parameters":{
      "clusterName":{
         "type":"string",
         "metadata":{
            "description":"The name of the HDInsight cluster to create."
         }
      },
      "clusterLoginUserName":{
         "type":"string",
         "defaultValue":"admin",
         "metadata":{
            "description":"These credentials can be used to submit jobs to the cluster and to log into cluster dashboards."
         }
      },
      "clusterLoginPassword":{
         "type":"securestring",
         "metadata":{
            "description":"The password must be at least 10 characters in length and must contain at least one digit, one non-alphanumeric character, and one upper or lower case letter."
         }
      },
      "sshUserName":{
         "type":"string",
         "defaultValue":"sshuser",
         "metadata":{
            "description":"These credentials can be used to remotely access the cluster."
         }
      },
      "sshPassword":{
         "type":"securestring",
         "metadata":{
            "description":"The password must be at least 10 characters in length and must contain at least one digit, one non-alphanumeric character, and one upper or lower case letter."
         }
      }
   },
   "variables":{
      "vNet":{
         "name":"[concat(parameters('clusterName'),'-vnet')]",
         "addressSpacePrefix":"10.0.0.0/16",
         "subnetName":"subnet1",
         "subnetPrefix":"10.0.0.0/24"
      },
      "networkSecurityGroup":{
         "name":"[concat(parameters('clusterName'),'-nsg')]"
      },
      "defaultStorageAccount":{
         "name":"[uniqueString(resourceGroup().id)]",
         "type":"Standard_LRS"
      }
   },
   "resources":[
      {
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroup').name]",
         "location":"[resourceGroup().location]",
         "apiVersion":"2016-03-30",
         "properties":{
            "securityRules":[
               {
                  "name":"hdirule1",
                  "properties":{
                     "description":null,
                     "protocol":"*",
                     "sourcePortRange":"*",
                     "destinationPortRange":"433",
                     "sourceAddressPrefix":"168.61.49.99/24",
                     "destinationAddressPrefix":"VirtualNetwork",
                     "access":"Allow",
                     "priority":300,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"hdirule2",
                  "properties":{
                     "description":null,
                     "protocol":"*",
                     "sourcePortRange":"*",
                     "destinationPortRange":"433",
                     "sourceAddressPrefix":"23.99.5.239/24",
                     "destinationAddressPrefix":"VirtualNetwork",
                     "access":"Allow",
                     "priority":301,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"hdirule3",
                  "properties":{
                     "description":null,
                     "protocol":"*",
                     "sourcePortRange":"*",
                     "destinationPortRange":"433",
                     "sourceAddressPrefix":"168.61.48.131/24",
                     "destinationAddressPrefix":"VirtualNetwork",
                     "access":"Allow",
                     "priority":302,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"hdirule4",
                  "properties":{
                     "description":null,
                     "protocol":"*",
                     "sourcePortRange":"*",
                     "destinationPortRange":"433",
                     "sourceAddressPrefix":"138.91.141.162/24",
                     "destinationAddressPrefix":"VirtualNetwork",
                     "access":"Allow",
                     "priority":303,
                     "direction":"Inbound"
                  }
               }
            ]
         }
      },
      {
         "type":"Microsoft.Network/virtualNetworks",
         "name":"[variables('vNet').name]",
         "location":"[resourceGroup().location]",
         "apiVersion":"2016-03-30",
         "dependsOn":[
            "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroup').name)]"
         ],
         "properties":{
            "addressSpace":{
               "addressPrefixes":[
                  "[variables('vnet').addressSpacePrefix]"
               ]
            },
            "subnets":[
               {
                  "name":"[variables('vnet').subnetName]",
                  "properties":{
                     "addressPrefix":"[variables('vnet').subnetPrefix]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup').name)]"
                     }
                  }
               }
            ]
         }
      },
      {
         "type":"Microsoft.Storage/storageAccounts",
         "name":"[variables('defaultStorageAccount').name]",
         "location":"[resourceGroup().location]",
         "apiVersion":"2016-01-01",
         "sku":{
            "name":"[variables('defaultStorageAccount').type]"
         },
         "kind":"Storage",
         "properties":{

         }
      },
      {
         "type":"Microsoft.HDInsight/clusters",
         "name":"[parameters('clusterName')]",
         "location":"[resourceGroup().location]",
         "apiVersion":"2015-03-01-preview",
         "dependsOn":[
            "[concat('Microsoft.Storage/storageAccounts/',variables('defaultStorageAccount').name)]",
            "[concat('Microsoft.Network/virtualNetworks/',variables('vNet').name)]"
         ],
         "properties":{
            "clusterVersion":"3.5",
            "osType":"Linux",
            "clusterDefinition":{
               "kind":"hadoop",
               "configurations":{
                  "gateway":{
                     "restAuthCredential.isEnabled":true,
                     "restAuthCredential.username":"[parameters('clusterLoginUserName')]",
                     "restAuthCredential.password":"[parameters('clusterLoginPassword')]"
                  }
               }
            },
            "storageProfile":{
               "storageaccounts":[
                  {
                     "name":"[replace(replace(concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('defaultStorageAccount').name), '2016-01-01').primaryEndpoints.blob),'https:',''),'/','')]",
                     "isDefault":true,
                     "container":"[parameters('clusterName')]",
                     "key":"[listKeys(resourceId('Microsoft.Storage/storageAccounts', variables('defaultStorageAccount').name), '2016-01-01').keys[0].value]"
                  }
               ]
            },
            "computeProfile":{
               "roles":[
                  {
                     "name":"headnode",
                     "targetInstanceCount":2,
                     "hardwareProfile":{
                        "vmSize":"Standard_D3"
                     },
                     "osProfile":{
                        "linuxOperatingSystemProfile":{
                           "username":"[parameters('sshUserName')]",
                           "password":"[parameters('sshPassword')]"
                        }
                     }
                  },
                  {
                     "name":"workernode",
                     "targetInstanceCount":2,
                     "hardwareProfile":{
                        "vmSize":"Standard_D3"
                     },
                     "osProfile":{
                        "linuxOperatingSystemProfile":{
                           "username":"[parameters('sshUserName')]",
                           "password":"[parameters('sshPassword')]"
                        }
                     }
                  }
               ]
            }
         }
      }
   ]
}
